<resources>
    <string name="app_name">CloudProjectMobileApplication</string>
    <string name="end_text_ask">종료하시겠습니까?</string>
    <string name="end_text_inf">뒤로가기를 한 번 더 누르면 종료됩니다</string>
    <string name="end_button_ok">Ok</string>
    <string name="end_button_cancel">Cancel</string>
    <string name="review">Review!</string>
    <string name="menuAppInfo">앱정보</string>
    <string name="menuLayerInfo">메뉴정보</string>
    <string name="korean">한식</string>
    <string name="japanese">일식</string>
    <string name="chinese">중식</string>
    <string name="western">양식</string>
    <string name="asian">아시안</string>
    <string name="cafe">카페</string>
    <string name="chicken">치킨</string>
    <string name="pizza">피자</string>
    <string name="fastFood">패스트푸드</string>
    <string name="bar">주점</string>
    <string name="bunsik">분식</string>
    <string name="dessert">디저트</string>
    <string name="restaurants">restaurants</string>
    <string name="userName">User Name</string>
    <string name="login">로그인</string>
    <string name="unAuthenticatedUser">인증이 되지 않은 사용자</string>
    <string name="authenticatedUser">인증 완료</string>
    <string name="myReview">내가 작성한 리뷰 보기</string>
    <string name="myReviewScreen"><u>My Review</u></string>
    <string name="storeName">가게 이름</string>
    <string name="foodName">음식 이름</string>
    <string name="comment">리뷰 내용</string>
    <string name="hashTag">해쉬 태그</string>
    <string name="reviewHint">리뷰를 작성해주세요</string>
    <string name="searchStoreEditText">리뷰를 작성할 식당은?</string>
    <string name="search">검색</string>
    <string name="storeNameReview">Store : </string>
    <string name="hashTagReview">해쉬 태그 : </string>
    <string name="reviewStore">가게명</string>
    <string name="hashTag0">HashTag#1</string>
    <string name="hashTag1">HashTag#2</string>
    <string name="hashTag2">HashTag#3</string>
    <string name="grade">만족도 : </string>
</resources>