<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:background="@drawable/edit_text_search"
            android:padding="8dp"
            android:hint="Text"
            android:textColor="#AAAAAA"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchBarLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditTextLayout">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="70"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="35"
                android:weightSum="6">

                <ImageButton
                    android:id="@+id/searchBarButton0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/korean"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
                <ImageButton
                    android:id="@+id/searchBarButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/western"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
                <ImageButton
                    android:id="@+id/searchBarButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/chinese"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
                <ImageButton
                    android:id="@+id/searchBarButton3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/japanese"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
                <ImageButton
                    android:id="@+id/searchBarButton4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/asian"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
                <ImageButton
                    android:id="@+id/searchBarButton5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/bunsik"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="35"
                android:weightSum="6">
                <ImageButton
                    android:id="@+id/searchBarButton6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/chicken"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
                <ImageButton
                    android:id="@+id/searchBarButton7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/pizza"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
                <ImageButton
                    android:id="@+id/searchBarButton8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/fastFood"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
                <ImageButton
                    android:id="@+id/searchBarButton9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/bar"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>
                <ImageButton
                    android:id="@+id/searchBarButton10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/cafe"
                    android:layout_marginHorizontal="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50"/>

                <ImageButton
                    android:id="@+id/searchBarButton11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/dessert"
                    android:scaleType="centerCrop"
                    android:src="@drawable/temp_button_50" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchRestaurantsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBarLayout">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:contentDescription="@string/restaurants">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>