<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/endFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="end"
                android:orientation="vertical"
                android:weightSum="60">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardViewAds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="35"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:strokeColor="#000000"
                    app:strokeWidth="4dp">

                    <com.google.android.gms.ads.AdView
                        android:id="@+id/adView0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/endTextViewAsk"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/end_text_ask"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endTextViewInf"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/end_text_inf"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:weightSum="20">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:background="@android:color/transparent">

                        <Button
                            android:id="@+id/endCancelButton"
                            style="@style/MyButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_button_cancel"
                            android:textColor="#222222"
                            app:cornerRadius="12dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:background="@android:color/transparent">

                        <Button
                            android:id="@+id/endOkButton"
                            style="@style/MyButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_button_ok"
                            android:textColor="#222222"
                            app:cornerRadius="12dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>