<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:id="@+id/reviewScreenCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/reviewText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:orientation="vertical"
            android:contentDescription="review"

            app:layout_constraintWidth_percent="0.75"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:id="@+id/storeName"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/storeName" />

                <TextView
                    android:id="@+id/foodName"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/storeName"
                    android:text="@string/foodName" />

                <TextView
                    android:id="@+id/hashTag"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/star4"
                    android:text="@string/hashTag"/>

                <ImageView
                    android:id="@+id/star0"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/star_filled_2"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/star_filled_2"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@id/star0"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/star_filled_2"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@id/star1"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/star_filled_2"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@id/star2"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/star_filled_2"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@id/star3"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">


                <TextView
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/comment" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/reviewText">

            <ImageView
                android:id="@+id/reviewImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/star_filled_2"
                app:layout_constraintHeight_percent="0.85"
                app:layout_constraintWidth_percent="0.85"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>